# attack-shark-linux

./: .gitignore  .gitmodules  99-attack-shark-x11.rules  Cargo.toml  Makefile  PKGBUILD  README.md  THIRD_PARTY_NOTICES.md  attack-shark.ini  config.toml  flake.nix  io.attackshark.driver.desktop  main.odin
scripts/: build-portable.sh  install.sh
src/: config.rs  device.rs  error.rs  lib.rs  main.rs  protocol.rs  x11.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  i18n.ts  styles.css  types.ts
ui/src/components/: BetaDisclaimer.tsx  ConnectionIndicator.tsx  PermissionWarning.tsx  SettingsModal.tsx  ThemeCheckbox.tsx  ThemeDropdown.tsx  ThemeNumberInput.tsx
