[package]
name = "attack-shark"
version = "1.0.0"
edition = "2024"
description = "Linux userspace driver for Attack Shark mice"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hidapi = "2.6"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
