[package]
name = "attack-shark-tauri"
version = "1.0.1"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
attack-shark = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8", features = [] }
tauri-plugin-opener = "2"
